<?xml version="1.0" encoding="utf-8"?>
<!-- Media Playback Controls -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/media_row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal">

    <Space android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="0.5"/>

    <ImageButton
        android:id="@+id/btn_rewind"
        style="@style/Widget.LGRemotePro.Button.Circle"
        android:contentDescription="@string/btn_rewind"
        android:src="@drawable/ic_rewind" />

    <Space android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1"/>

    <ImageButton
        android:id="@+id/btn_play"
        style="@style/Widget.LGRemotePro.Button.Circle"
        android:contentDescription="@string/btn_play"
        android:src="@drawable/ic_play" />

    <Space android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1"/>

    <ImageButton
        android:id="@+id/btn_pause"
        style="@style/Widget.LGRemotePro.Button.Circle"
        android:contentDescription="@string/btn_pause"
        android:src="@drawable/ic_pause" />

    <Space android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1"/>

    <ImageButton
        android:id="@+id/btn_stop"
        style="@style/Widget.LGRemotePro.Button.Circle"
        android:contentDescription="@string/btn_stop"
        android:src="@drawable/ic_stop" />

    <Space android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1"/>

    <ImageButton
        android:id="@+id/btn_fast_forward"
        style="@style/Widget.LGRemotePro.Button.Circle"
        android:contentDescription="@string/btn_fast_forward"
        android:src="@drawable/ic_fast_forward" />

    <Space android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="0.5"/>

</LinearLayout>
