<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_remote">

    <fragment
        android:id="@+id/navigation_remote"
        android:name="com.example.bai3.ui.remote.RemoteFragment"
        android:label="@string/nav_remote"
        tools:layout="@layout/fragment_remote" />

    <fragment
        android:id="@+id/navigation_devices"
        android:name="com.example.bai3.ui.devices.DeviceDiscoveryFragment"
        android:label="@string/nav_devices"
        tools:layout="@layout/fragment_device_discovery" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.bai3.ui.settings.SettingsFragment"
        android:label="@string/nav_settings" />

</navigation>
